force-app/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__Number_Of_Manual_Runs__c.field-meta.xml
<CustomField>
    <fullName>rh2__Number_Of_Manual_Runs__c</fullName>
    <label>Number of Manual Runs For Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>