force-app/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__Override_Object_Level_Forced_Async__c.field-meta.xml
<CustomField>
    <fullName>rh2__Override_Object_Level_Forced_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Rollup Helper will override the object level force async setting to run in realtime.</description>
    <inlineHelpText>If checked, Rollup Helper will override the object level force async setting to run in realtime.</inlineHelpText>
    <label>Override Object Level Forced Async</label>
    <type>Checkbox</type>
</CustomField>