force-app/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__truncatorOption__c.field-meta.xml
<CustomField>
    <fullName>rh2__truncatorOption__c</fullName>
    <description>Stores truncation indicator for text rollups</description>
    <inlineHelpText>Stores truncation indicator for text rollups</inlineHelpText>
    <label>Truncator</label>
    <length>16</length>
    <type>Text</type>
</CustomField>