force-app/main/default/objects/rh2__PS_Rollup_Audit__c/fields/rh2__uniqueField__c.field-meta.xml
<CustomField>
    <fullName>rh2__uniqueField__c</fullName>
    <description>The field to evaluate on child records when performing a unique rollup</description>
    <inlineHelpText>The field to evaluate on child records when performing a unique rollup</inlineHelpText>
    <label>Unique Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>